# kmag

./: LICENSE.txt  README.md  setup.cfg  setup.py
src/: KMAG2012.f
test/: test.py
