[metadata]
name = kmag
version = 1.0.1
author = Liutauras Rusaitis
author_email = rusaitis@ucla.edu
description = Khurana Magnetic Field Model (Saturn)
url = https://github.com/rusaitis/kmag
keywords =
  magnetosphere
  field
  model
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Magnetospheric Physics
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
  python-dateutil
  numpy >= 1.16
package_dir=
  =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
  types-python-dateutil
plot =
  matplotlib
  seaborn
